# -employee-payment-manager

admin/: .gitignore  app.py  pyproject.toml
admin/src/core/: config.py  database.py  seeds.py
admin/src/core/models/: __init__.py  auth.py  employee.py  payment.py  user.py
admin/src/core/schemas/: employee.py  payment.py  user.py
admin/src/core/service/: service_employee.py  service_payment.py  service_permission.py  service_permisson.py  service_rol.py  service_user.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: auth.py  employee.py  payments.py  users.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/employees/: create_employee.html  edit_employee.html  index.html
admin/src/web/templates/payments/: create_payment.html  index.html  show_payment.html
admin/src/web/templates/users/: create_user.html  edit_user.html  index.html  show_user.html
admin/static/: employees  payments
