[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ayelen Marina Sarco <ayelensarco94@gmail.com>"]
readme = "README.md"
packages = [{ include = "web", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
